<resources>
    <string name="app_name">TabTest</string>
    <string name="tab_1_title">开户礼金</string>
    <string name="tab_2_title">优惠申请</string>
    <string name="tab_3_title">领取签到金</string>
    <string name="Matching">大廳</string>
    <string name="Watchlist">真人</string>
    <string name="Rates">老虎机</string>
    <string name="Deals">综合</string>
    <string name="Listing">我的</string>

    <string name="event">event</string>
    <string name="help">help</string>
</resources>
