<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
     >

    <LinearLayout
        android:id="@+id/bottonNavBar"
        android:layout_width="0dp"
        android:layout_height="63dp"
        android:layout_alignParentBottom="true"
        android:background="@color/md_white_1000"
        android:elevation="10dp"
        android:foregroundGravity="bottom"
        android:orientation="horizontal"
        android:paddingTop="5dp"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="3dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="3dp"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="2dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp">


        <RadioGroup
            android:id="@+id/radioGroup1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:baselineAligned="false"
            android:gravity="center"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/matching"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:button="@null"
                android:checked="false"
                android:drawableTop="@mipmap/home_icon"
                android:gravity="center"
                android:padding="2dp"
                android:text="@string/Matching"
                android:textColor="@color/bottom"
                android:textSize="12sp" />

            <RadioButton
                android:id="@+id/watchList"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:button="@null"
                android:checked="false"
                android:drawableTop="@mipmap/live_icon"
                android:gravity="center"
                android:padding="2dp"
                android:text="@string/Watchlist"
                android:textColor="@color/bottom"
                android:textSize="12sp" />

            <RadioButton
                android:id="@+id/rates"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:button="@null"
                android:checked="false"
                android:drawableTop="@mipmap/tiger_icon"
                android:gravity="center"
                android:padding="2dp"
                android:text="@string/Rates"
                android:textColor="@color/bottom"
                android:textSize="12sp" />

            <RadioButton
                android:id="@+id/deals"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:button="@null"
                android:checked="false"
                android:drawableTop="@mipmap/mix_icon"
                android:gravity="center"
                android:padding="2dp"
                android:text="@string/Deals"
                android:textColor="@color/bottom"
                android:textSize="12sp" />

            <RadioButton
                android:id="@+id/listing"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:button="@null"
                android:checked="false"
                android:drawableTop="@mipmap/member_icon"
                android:gravity="center"
                android:padding="2dp"
                android:text="@string/Listing"
                android:textColor="@color/bottom"
                android:textSize="12sp" />


        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/dynamicContent"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_gravity="bottom"
        android:layout_weight="1"
        android:background="@color/colorWhite"
        android:orientation="vertical"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1"
        app:layout_constraintBottom_toBottomOf="@+id/bottonNavBar"
        android:layout_marginBottom="1dp">

    </LinearLayout>


</android.support.constraint.ConstraintLayout>